# BlossomData

./: .gitignore  AGENTS.md  LICENSE  README.md  README_EN.md  config.yaml.example  pyproject.toml  requirements.txt
blossom/: log.py
blossom/conf/: __init__.py  config.py
blossom/context/: context.py  provider_manager.py
blossom/dataframe/: __init__.py  data_handler.py  dataframe.py  default_data_handler.py  local_dataframe.py  ray_dataframe.py  spark_dataframe.py
blossom/dataset/: __init__.py  dataset.py  loader.py  standard_dataset.py
blossom/io/: __init__.py  schema.py
blossom/op/: __init__.py  base_operator.py  failed_item_filter.py  filter_operator.py  map_operator.py  operator.py  transform_operator.py
blossom/pipeline/: __init__.py  base_pipeline.py  chunked_pipeline.py  pipeline.py  simple_pipeline.py
blossom/provider/: __init__.py  base_provider.py  openai.py  protocol.py  provider.py
blossom/schema/: __init__.py  base_schema.py  chat_schema.py  custom_schema.py  schema.py  text_schema.py
blossom/util/: __init__.py  image.py  json.py  text.py  type.py
example/: chat_content_filter.py  chat_content_replace.py  chat_distill.py  chat_embedding.py  chat_length_filter.py  chat_math_distill.py  chat_repetition_filter.py  custom_data_handler.py  custom_operator.py  decorator_operator.py  direct_context.py  distributed_dataset.py  failed_item_filter.py  image_caption_generator.py  length_filter.py  math_distill_with_validate.py  multi_reasoning_filter.py  multi_turn_chat_synthesis.py  multi_turn_persona_synthesis.py  statistical_analysis.py
example/data/: chat.jsonl
src/blossom/: __init__.py
tests/: conftest.py  stubs.py  test_log.py
tests/conf/: test_config.py
tests/context/: test_context.py  (+1 more)
(+155 files in other folders)
